<resources>
    <string name="app_name">Medic Plus</string>
    <string name="version">V 1.0</string>
    <string name="app_share_link" translatable="false">https://play.google.com/store/apps/details?id=tech.salroid.filmy</string>
    <string name="shareappdetails">Share application to other users</string>
    <string name="no_items">No Items</string>
    <string name="medicine_count">Medicine Count</string>
    <string name="out_of_stock_medicines">Out Of Stock Medicines</string>
    <string name="expired_medicines">Expired Medicines</string>
    <string name="add_customers">Add Customers</string>
    <string name="kmc_store_mangalore">KMC Store, Mangalore</string>
</resources>
