<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ViewFlipper
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:visibility="visible"
            tools:ignore="UselessLeaf,UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/emptyListview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_items"
                    android:drawableTop="@drawable/ic_warning"
                    android:drawableTint="#ccc"
                    android:drawablePadding="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="0,1"
                    android:visibility="visible"
                    tools:ignore="MissingConstraints">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_scrollFlags="scroll|enterAlways">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="10dp"
                            android:padding="20dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="0dp"
                            app:layout_scrollFlags="scroll|enterAlways"
                            tools:ignore="MissingConstraints,UnusedAttribute">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="15dp"
                                    android:layout_marginRight="15dp"
                                    app:cardCornerRadius="0dp">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginRight="10dp"
                                        android:orientation="horizontal"
                                        tools:ignore="TooDeepLayout">

                                        <EditText
                                            android:id="@+id/txtOutOfStockMedicines"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:background="@drawable/input_text"
                                            android:ems="10"
                                            android:gravity="center"
                                            android:hint="Search for Medicines"
                                            android:inputType="textPersonName"
                                            android:padding="10dp"
                                            android:importantForAutofill="no" />

                                    </LinearLayout>

                                </androidx.cardview.widget.CardView>

                                <androidx.cardview.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="15dp"
                                    android:layout_marginRight="15dp"
                                    android:layout_marginBottom="10dp"
                                    app:cardBackgroundColor="@color/card_background"
                                    app:cardCornerRadius="0dp">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="10dp"
                                        android:layout_marginRight="10dp"
                                        android:gravity="center"
                                        android:orientation="vertical"
                                        android:padding="10dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/medicine_count"
                                            android:textStyle="bold" />

                                        <TextView
                                            android:id="@+id/outofmedicines_count"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="5dp"
                                            android:gravity="center"
                                            android:text="200"
                                            android:textSize="30sp"
                                            android:textStyle="bold" />

                                    </LinearLayout>

                                </androidx.cardview.widget.CardView>


                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ListView
                            android:id="@+id/outOfStockListview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dip"
                            android:divider="@null">

                        </ListView>

                    </TableRow>

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </ViewFlipper>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:padding="10dp"
        app:titleTextColor="@android:color/white"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/but_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back"
                tools:ignore="ContentDescription,VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/expired_medicines"
                android:textColor="@color/text_color"
                android:textSize="@dimen/title_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/but_back"
                tools:ignore="UnusedAttribute" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>